--- a/source/pubspec.yaml
+++ b/source/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
+  fl_common_lint: ^1.8.0
 
 flutter:
   uses-material-design: true
