--- a/source/pubspec.yaml
+++ b/source/pubspec.yaml
@@ -11,8 +11,35 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cupertino_icons: ^1.0.8
+
 dev_dependencies:
   fl_common_lint: ^1.8.0
 
+  build_runner: ^2.7.1
+  flutter_gen_runner: ^5.11.0
+
 flutter:
-  uses-material-design: true
+  assets:
+    - assets/fonts/
+    - assets/images/
+
+  fonts:
+    - family: SF Pro Text
+      fonts:
+        - asset: assets/fonts/SF-Pro-Text-Regular.otf
+          weight: 400
+        - asset: assets/fonts/SF-Pro-Text-Medium.otf
+          weight: 500
+        - asset: assets/fonts/SF-Pro-Text-Semibold.otf
+          weight: 600
+        - asset: assets/fonts/SF-Pro-Text-Bold.otf
+          weight: 700
+
+flutter_gen:
+  output: lib/resource/
+
+  fonts:
+    enabled: true
+    outputs:
+      class_name: AppFontFamily
